--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -1,137 +1,209 @@
-
 .form{
     display: grid;
-    gap:1rem;
+    gap:1.5rem;
     padding: 1rem;
+    .form__group{
+        display: grid;
+        gap:0.5rem;
+        width:100%;
+        
+        .wrapper{
+            overflow: hidden;
+            border-radius: 5px;
+             position: relative;
+        }
+        
+        .left__wrapper{
+          @extend .wrapper;
+            
+            &:before{
+                position: absolute;
+                padding:0 0.25rem;
+                content:'$';
+                display: grid;
+                color:$s7;
+                place-content: center;
+                top:0;
+                left:0;
+                height: 100%;
+                background: $bg-main;
+                width: 3rem;
+                z-index:5;
+            }
+        }
+        
+        .right__wrapper.input__years{
+            @extend .wrapper;
+            &:before{
+                position: absolute;
+                content:'years';
+                display: grid;
+                color:$s7;
+                padding:0 0.25rem;
+                place-content: center;
+                top:0;
+                right:0;
+                height: 100%;
+                background: $bg-main;
+                width: 3rem;
+                z-index:5;
+            }
+        }
+        .right__wrapper.input__rates{
+            @extend .wrapper;
+            &:before{
+                position: absolute;
+                content:'%';
+                display: grid;
+                color:$s7;
+                padding:0 0.25rem;
+                place-content: center;
+                top:0;
+                right:0;
+                height: 100%;
+                background: $bg-main;
+                width: 3rem;
+                z-index:5;
+            }
+        }
+        
+
+        
+        
+    }
     
-    .joint__group{
+    .group__items{
         display: grid;
         gap:1rem;
         
-        @include tab{
+        @include desktop{
             grid-template-columns: 1fr 1fr;
+            
         }
     }
     
-    &__group{
-        display: grid;
-        gap:0.25rem;
+    
+    
+    
+    .input{
+        padding: 0.5rem;
+        width: 100%;
+        border:1.5px solid $s3;
+        outline:none;
+        background: transparent;
         
-        label{
-            color: $s7;
+        &:focus{
+            border:1.5px solid $primary;
             
-            
+       
         }
         
-        .input__wrapper{
-            border: 1px solid $s3; 
-            border: 1px solid transparent;
-            position: relative;
-            border-radius: 10px;
-            
+        &__amount{
+            padding-left: 3.5rem;
         }
         
-        .amount{
-            @extend .input__wrapper;
-            .input{
-                border-radius: 10px;
-                padding: .75rem ; 
-                width: 100%;
-                padding-left: 3rem;
-                outline: none;
-                border: 1px solid $s3; 
-                transition: all 400ms ease-in;
-                
-                &:focus{
-                    border: 1px solid $primary; 
-                }
-           
-            
-        }
-                
-               
-        
-            
-           
-           
-            
-            
-                
-                
-                
-                
-                
-            }
-            
-            
-        }
-        
-        
-        
-        .input{
-            background:transparent;
-            
-            &__amount{
-                padding-left: 3.5rem;
-             
-                }
-            }
-            
-            // &__wrapper{
-            //     position: relative;
-            //     border-radius: 5px;
-            //     overflow: hidden;
-                
-            //     // &::before{
-            //     //     position: absolute;
-            //     //     height: 100%;
-            //     //     width: 3rem;
-            //     //     color:$s9;
-            //     //     display: grid;
-            //     //     place-content: center;
-            //     //     content: '$';
-            //     //     left:0;
-            //     //     background: $bg-main;
-            //     //     z-index: 10;
-                    
-                    
-            //     // }
-                
-            //     // &:hover{
-            //     //     background: #000;
-            //     // }
-                
-                
-                
-            //     
-                
-            //     .input{
-            //         border: none;
-            //         width: 100%;
-            //         outline: none;
-            //         &:focus{
-            //             .input__wrapper{
-                            
-            //                 border: 1px solid $primary;
-            //             }
-            //         }
-            //     }
-            // }
-            // padding: .75rem ;
-          
-            // border-radius: 5px;
-            // color:$s9;
-            // outline: none;
-            // position: relative;
-            
-      
-            
-        
-            
-            // &.warning{
-            //     border: 1px solid $danger;
-            // }
-            
-          
-        }
     }
+    
+    .radio__group{
+        display: grid;
+        gap:1.5rem;
+        
+       & > input[type="radio"]{
+            // display: none;
+            opacity:0.5;
+        }
+        
+        .radio__wrapper{
+            background: $primary;
+            padding:0.5rem ;
+            display: flex;
+            gap:1rem;
+            align-items: center;
+            
+        }
+        
+        
+// .radio__group input[type="radio"] {
+//     display: none;
+//   }
+  
+  .radio-label {
+    display: flex;
+    align-items: center;
+    padding: .75rem;
+    cursor: pointer;
+    background: transparent;
+    border:1px solid $s3;
+    color:$s9;
+    transition: all ease-in-out;
+    border-radius: 10px;
+  }
+  
+  .radio-circle {
+    width: 20px;
+    height: 20px;
+    border: 2px solid $s7;
+    border-radius: 50%;
+    margin-right: 10px;
+    padding: 1px;
+    transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    background: transparent;
+    position: relative;
+  
+    &::before{
+        content: "";
+        width: 60%;
+        height: 60%;
+        left:50%;
+        top:50%;
+        transform: translate(-50%,-50%);
+        background:transparent;
+        border-radius: 50%;
+        position: absolute;
+        
+        
+    }
+    
+    
+}
+  
+  .radio-text {
+    font-size: 1rem;
+    color: $s7;
+    transition: color 0.3s ease-in-out;
+  }
+  
+ input[type="radio"]:checked + .radio-label {
+    background-color:#fafae0;
+    border: 1px  solid $primary;
+    
+  }
+  input[type='radio']:hover + .radio-label{
+    border: 1px  solid $primary;
+  }
+  
+  input[type="radio"]:checked + .radio-label .radio-circle {
+    border-color: $primary;
+    background-color:transparent;
+    
+    &:before{
+        background: $primary;
+    }
+  }
+  
+ input[type="radio"]:checked + .radio-label .radio-text {
+    color: $s9;
+  }
+  
+    
+    }
+    
+    
+  
+    
+    
+    
+    
+}
+
+
