Results View Done

--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -109,8 +109,8 @@
         gap:1.5rem;
         
        & > input[type="radio"]{
-            // display: none;
-            opacity:0.5;
+             display: none;
+        
         }
         
         .radio__wrapper{
