--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,6 +3,75 @@
   font-weight: 700;
 }
 
+.flex {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.justify--center {
+  justify-content: center;
+}
+
+.align--center {
+  align-items: center;
+}
+
+.app {
+  width: 100%;
+  height: 100%;
+  display: grid;
+}
+@media (min-width: 1440px) {
+  .app {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.app__main {
+  display: grid;
+}
+.app__main .header {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+@media (min-width: 1440px) {
+  .app__main .header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.app__results {
+  background: hsl(202, 55%, 16%);
+  color: hsl(0, 0%, 100%);
+  padding: 1rem;
+  position: relative;
+}
+.app__results__calculations h2 {
+  margin-bottom: 1rem;
+}
+.app__results__calculations p {
+  color: hsl(200, 26%, 54%);
+  font-size: 0.85rem;
+  margin-bottom: 1rem;
+}
+.app__results__calculations__item {
+  border-radius: 10px;
+  border-top: 3px solid hsl(61, 70%, 52%);
+  background: hsl(202, 56%, 12%);
+  padding: 1rem;
+}
+.app__results__calculations__item div {
+  padding: 1rem 0;
+}
+.app__results__calculations__item div:last-child {
+  border-top: 0.5px solid hsl(200, 24%, 40%);
+}
+.app__results__calculations__item h1 {
+  color: hsl(61, 70%, 52%);
+}
+
 .form {
   display: grid;
   gap: 1.5rem;
@@ -87,7 +156,7 @@
   gap: 1.5rem;
 }
 .form .radio__group > input[type=radio] {
-  opacity: 0.5;
+  display: none;
 }
 .form .radio__group .radio__wrapper {
   background: hsl(61, 70%, 52%);
@@ -152,6 +221,68 @@
   color: hsl(202, 55%, 16%);
 }
 
+.form__group__new {
+  margin-top: 0.5rem;
+  display: flex;
+  border-radius: 10px;
+}
+.form__group__new.row__reverse {
+  flex-direction: row-reverse;
+}
+.form__group__new .text__label {
+  background: #dcedf7;
+  padding: 0.75rem 1rem;
+  border: 1.5px solid hsl(203, 41%, 72%);
+  border-right: 1px solid transparent;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: all 300ms ease-in;
+  color: hsl(200, 24%, 40%);
+}
+.form__group__new .text__label.right {
+  border: 1.5px solid hsl(203, 41%, 72%);
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left: 1px solid transparent;
+  border-bottom-right-radius: 10px;
+}
+.form__group__new input[type=text] {
+  outline: none;
+  padding: 0.75rem;
+  flex: 1;
+  border: 1.5px solid hsl(200, 26%, 54%);
+  border-left: 1px solid transparent;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transition: all 300ms ease-in;
+}
+.form__group__new input[type=text].right {
+  border: 1.5px solid hsl(200, 26%, 54%);
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.form__group__new input[type=text]:focus {
+  border: 1px solid hsl(61, 70%, 52%);
+}
+.form__group__new input[type=text].error {
+  border: 1.5px solid hsl(4, 69%, 50%);
+}
+.form__group__new .text__label.active {
+  border: 1.5px solid hsl(61, 70%, 52%);
+  background: hsl(61, 70%, 52%);
+  color: hsl(202, 55%, 16%);
+}
+.form__group__new .text__label.error {
+  border: 1.5px solid hsl(4, 69%, 50%);
+  background: hsl(4, 69%, 50%);
+  color: hsl(0, 0%, 100%);
+}
+
+.group__items {
+  display: flex;
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -162,11 +293,11 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
   font-size: 16px;
+  background: #dcedf7;
 }
 
 main {
   min-height: 100vh;
-  background: #dcedf7;
 }
 @media (min-width: 1440px) {
   main {
@@ -176,66 +307,45 @@ main {
 }
 
 .button {
-  padding: 0.75rem;
+  padding: 0.75rem 1.5rem;
   font-family: inherit;
   border: none;
   border-radius: 20px;
+  position: relative;
+  display: flex;
+  cursor: pointer;
+  font-weight: 700;
+  border: 1px solid hsl(61, 70%, 52%);
+  transition: all 400ms ease-in;
+}
+@media (min-width: 768px) {
+  .button {
+    justify-self: flex-start;
+  }
 }
 .button--primary {
   background-color: hsl(61, 70%, 52%);
   color: hsl(202, 55%, 16%);
-  font-weight: 700;
   letter-spacing: 1px;
+}
+.button--primary:hover {
+  background-color: #fafae0;
 }
 
 .container {
-  margin-inline: auto;
-  max-width: 768px;
+  max-width: 60em;
   background: hsl(0, 0%, 100%);
-  width: 100%;
+  margin-inline: auto;
 }
 @media (min-width: 768px) {
   .container {
     border-radius: 16px;
+    overflow: hidden;
+    margin: 2rem;
   }
 }
 
-.app {
-  display: grid;
-}
-.app .header {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  padding: 1rem;
-}
-.app .header h1 {
-  font-size: 1.25rem;
-  color: hsl(202, 55%, 16%);
-  font-weight: 700;
-}
-.app .header a {
-  color: hsl(202, 55%, 16%);
-  cursor: pointer;
-}
-@media (min-width: 1440px) {
-  .app .header {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-@media (min-width: 1440px) {
-  .app {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-.app__results {
-  height: 100%;
-  background: hsl(202, 55%, 16%);
-}
-@media (min-width: 1440px) {
-  .app__results {
-    border-bottom-left-radius: 30px;
-  }
+.paragraphs {
+  font-size: 0.75rem;
+  color: hsl(200, 26%, 54%);
 }/*# sourceMappingURL=style.css.map */
