--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 @import 'variables';
 @import 'mixins';
+@import 'layout';
 @import 'form';
+@import 'formgroup';
 
 *{
     box-sizing: border-box;
@@ -13,11 +15,12 @@ body{
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
+    background: $bg-main;
 }
 
 main{
     min-height: 100vh;
-    background: $bg-main;
+ 
    
     
     @include desktop{
@@ -28,83 +31,60 @@ main{
 
 
 .button{
-    padding: .75rem ;
+    padding: .75rem 1.5rem ;
     font-family: inherit;
     border:none;
     border-radius: 20px;
+    position:relative;
+    display: flex;
+    cursor: pointer;
+    font-weight: 700;
+    border:1px solid  $primary;
+    transition: all 400ms ease-in;
+    
+    @include tab{
+        justify-self: flex-start;
+    }
+    
+ 
     
      
     
     &--primary{
         background-color:$primary;
         color:$s9;
-        font-weight: 700;
+      
         letter-spacing:1px;
+        
+        &:hover{
+            background-color: $bg--btn--hover
+        }
     }
 }
 
 
 .container{
-    margin-inline: auto;
-    max-width: 768px;
+    max-width: 60em;
     background: $white;
-    width: 100%;
+    margin-inline: auto;
+   
+    
     
     @include tab{
         
         border-radius: 16px;
+        overflow: hidden;
+        margin:2rem;
     }
     // padding:1rem;
     
 }
 
 
-.app{
+
+
+.paragraphs{
+    font-size: .75rem;
+    color:$s5;
     
-    display: grid;
-    
-    .header{
-        display: flex;
-        flex-direction: column;
-        gap:0.5rem;
-        padding: 1rem;
-        
-        h1{
-            font-size:1.25rem;
-            color:$s9;
-            font-weight: 700;
-        }
-        
-        a{
-            color:$s9;
-            cursor: pointer;
-        }
-        
-        @include desktop{
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-        }
-    }
-    
-    @include desktop{
-        grid-template-columns: 1fr 1fr;
-    }
-    
-    &__results{
-        height: 100%;
-        background: $s9;
-        
-        @include desktop{
-            border-bottom-left-radius: 30px;
-        }
-    }
-    
-    .results__empty{
-        
-     
-     
-      
-        
-    }
 }
