--- a/app/scss/_formgroup.scss
+++ b/app/scss/_formgroup.scss
@@ -22,6 +22,7 @@
         transition: all 300ms ease-in;
         color:$s7;
        
+       
         
         &.right{
             border: 1.5px solid $s3;
@@ -30,6 +31,7 @@
             border-left: 1px solid transparent;
          
             border-bottom-right-radius: 10px;
+            border-top-right-radius: 10px;
         }
     }
     input[type="text"]{
@@ -74,8 +76,41 @@
     
     .text__label.error{
         border: 1.5px solid $danger;
-        background: $danger;
+        // background: $danger;
         color: $white;
+        position: relative;
+        overflow: hidden;
+        z-index: 5;
+         background: transparent;
+        
+        &::before{
+            content: '';
+            position: absolute;
+            left:0;
+            top:0;
+            width: 100%;
+            height: 100%;
+            color:#fff;
+            background: $danger;
+            z-index: -5;
+            opacity: 0;
+            animation: slideIn 500ms forwards ease-in-out;
+        }
+        
+        
+    }
+    
+    
+    @keyframes slideIn {
+        0%{
+            width: 0;
+            opacity: 0;
+        }
+        100%{
+            width: 100%;
+            opacity: 1;
+        }
+        
     }
  
     
@@ -89,4 +124,44 @@
     
     }
     
+}
+
+.group__item, .form__group__new,.radio__group{
+ 
+    position:relative;
+ 
+    
+    .error__wrapper{
+        position: absolute;
+        left:0;
+        width: 100%;
+        bottom: -105%;
+        height:100%;
+        color:$danger;
+        opacity: 0;
+       transform: translateY(-25%);
+        font-size: 0.75rem;
+        animation: dropIn 500ms ease-in forwards ;
+        transition: all 500ms;
+        
+        
+    }
+}
+
+@keyframes dropIn {
+    0%{
+        opacity: 0;
+        transform: translateY(-25%);
+    }
+    
+    // 50%{
+    //     opacity: 0.1;
+    //     transform: translateY(-25%);
+        
+    // }
+    
+    100%{
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
