--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -33,6 +33,23 @@
         color:$white;
         padding:1rem;
         position: relative;
+        min-height: 450px;
+        
+        
+        .results__empty{
+            position: absolute;
+            left:50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap:.75rem;
+            text-align: center;
+            transform: translate(-50%,-300%);
+            opacity: 0;
+            animation: showUp 500ms ease-in forwards;
+        }
         
         
         
@@ -60,6 +77,8 @@
              $primary;
             background: $bg-results;
             padding:1rem;
+            opacity: 0;
+            animation: slideUp 500ms ease-in forwards;
             
             h1{
                 color:$primary;
@@ -69,4 +88,35 @@
         
         
     }
+}
+
+
+@keyframes slideUp{
+    0%{
+        opacity: 0;
+        transform: translateY(500px);
+    }
+    50%{
+        opacity: 0.5;
+        transform: translateY(250px);
+    }
+    100%{
+        opacity: 1;
+        
+        transform: translateY(0);
+    }
+}
+
+
+@keyframes showUp{
+    0%{
+        opacity: 0;
+        transform: translate(-50%,-300%);
+    }
+    
+    100%{
+        opacity: 1;
+        transform: translate(-50%,-50%);
+    }
+    
 }
